+ new products docs and api
