# src/product/dto/front.product.pagination.dto.ts
@@ -1,8 +1,8 @@
 import { ApiProperty } from "@nestjs/swagger";
 import { PaginationDto } from "src/common/dto/pagination.dto";
-import { FrontProductDto } from "./front.product.dto";
+import { ProductDto } from "./product.dto";
 
 export class FrontProductPaginationDto extends PaginationDto {
-    @ApiProperty({ type: [FrontProductDto] })
-    items: FrontProductDto[]
+    @ApiProperty({ type: [ProductDto] })
+    items: ProductDto[]
 }
